--- a/crypto_closing_price_forecasting_using__twitter_lexisnexis.ipynb
+++ b/crypto_closing_price_forecasting_using__twitter_lexisnexis.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "Top 10 bitcoin price twitter accounts\n",
     "\n",
-    "#Source: https://coinme.com/10-crypto-twitter-accounts-everyone-should-follow/\n",
+    "Source: https://coinme.com/10-crypto-twitter-accounts-everyone-should-follow/\n",
     "\n",
     "lstUserNames = ['DocumentingBTC', 'APompliano', 'NickSzabo4', 'nic__carter','CarpeNoctom', 'Gladstein', '100trillionUSD',\\\n",
     "                'MessariCrypto', 'MartyBent', 'aantonop', \\\n",
@@ -397,61 +397,6 @@
    ],
    "source": [
     "%time pdInputData['LemmatizedText'] = pdInputData['text'].apply(preprocessDataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'import re, nltk, string\\nfrom textblob import TextBlob\\n\\ndef cleaner(tweet):\\n    \\n    \\n    tweet = re.sub(\"@[A-Za-z0-9]+\",\"\",tweet) #Remove @ sign\\n    tweet = re.sub(r\"(?:\\\\@|http?\\\\://|https?\\\\://|www)\\\\S+\", \"\", tweet) #Remove http links\\n    tweet = re.sub(r\"\\'\"\", \"\", tweet) #Remove http links\\n    tweet = \" \".join(tweet.split())\\n    tweet = tweet.replace(\"#\", \"\").replace(\"_\", \" \") #Remove hashtag sign but keep the text\\n    tweet = \" \".join(w for w in nltk.wordpunct_tokenize(tweet) if w.lower() in w or not w.isalpha()) \\n    tweet = re.sub(\\'\\n\\', \\' \\', str(tweet))\\n    tweet = re.sub(\\'\\\\w*\\\\d\\\\w*\\', \\'\\', tweet) \\n    tweet=tweet.lower()\\n    \\n    return tweet\\n\\ndef get_sentiment(df):\\n    from nltk.stem import LancasterStemmer\\n    import spacy\\n\\n    df[\\'text\\'] = df[\\'text\\'].apply(cleaner)\\n    df[\\'text\\'] = df[\\'text\\'].apply(lambda x: re.sub(\\'[%s]\\' % re.escape(string.punctuation), \\'\\', x))\\n    \\n    nlp = spacy.load(\\'en_core_web_sm\\',disable = [\\'parser\\', \\'ner\\'])\\n    lancaster=LancasterStemmer()\\n    \\n    df[\\'ProcessedText\\'] = df[\\'text\\'].apply(lambda x: \\' \\'.join([lancaster.stem(str(token)) for token in list(nlp(x)) if (token.is_stop==False)]))\\n    \\n    return df\\n\\n%time pdInputData=get_sentiment(pdInputData)\\npdInputData.head()\\n'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "\"\"\"import re, nltk, string\n",
-    "from textblob import TextBlob\n",
-    "\n",
-    "def cleaner(tweet):\n",
-    "    \n",
-    "    \n",
-    "    tweet = re.sub(\"@[A-Za-z0-9]+\",\"\",tweet) #Remove @ sign\n",
-    "    tweet = re.sub(r\"(?:\\@|http?\\://|https?\\://|www)\\S+\", \"\", tweet) #Remove http links\n",
-    "    tweet = re.sub(r\"\\'\\\"\", \"\", tweet) #Remove http links\n",
-    "    tweet = \" \".join(tweet.split())\n",
-    "    tweet = tweet.replace(\"#\", \"\").replace(\"_\", \" \") #Remove hashtag sign but keep the text\n",
-    "    tweet = \" \".join(w for w in nltk.wordpunct_tokenize(tweet) if w.lower() in w or not w.isalpha()) \n",
-    "    tweet = re.sub('\\n', ' ', str(tweet))\n",
-    "    tweet = re.sub('\\w*\\d\\w*', '', tweet) \n",
-    "    tweet=tweet.lower()\n",
-    "    \n",
-    "    return tweet\n",
-    "\n",
-    "def get_sentiment(df):\n",
-    "    from nltk.stem import LancasterStemmer\n",
-    "    import spacy\n",
-    "\n",
-    "    df['text'] = df['text'].apply(cleaner)\n",
-    "    df['text'] = df['text'].apply(lambda x: re.sub('[%s]' % re.escape(string.punctuation), '', x))\n",
-    "    \n",
-    "    nlp = spacy.load('en_core_web_sm',disable = ['parser', 'ner'])\n",
-    "    lancaster=LancasterStemmer()\n",
-    "    \n",
-    "    df['ProcessedText'] = df['text'].apply(lambda x: ' '.join([lancaster.stem(str(token)) for token in list(nlp(x)) if (token.is_stop==False)]))\n",
-    "    \n",
-    "    return df\n",
-    "\n",
-    "%time pdInputData=get_sentiment(pdInputData)\n",
-    "pdInputData.head()\n",
-    "\"\"\""
    ]
   },
   {
